--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brawlstars-anim-site",
+  "name": "brawl-animation",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "@react-three/fiber": "8.15.15",
     "@react-three/drei": "9.97.0",
     "zustand": "4.5.4",
-    "framer-motion": "11.2.10"
+    "framer-motion": "11.2.10",
+    "jwt-decode": "4.0.0"
   }
 }
